2008-11-01  Janus Weil  <janus@gcc.gnu.org>

	PR fortran/36426
	* gfortran.dg/proc_decl_19.f90: New.

2008-11-01  Steven G. Kargl  <kargls@comcast.net>

	PR fortran/19925
	* gfortran.dg/initialization_20.f90: New test.
	* gfortran.dg/initialization_21.f90: Ditto.

2008-11-01  Daniel Kraft  <d@domob.eu>

	PR fortran/35681
	* gfortran.dg/mvbits_4.f90: New test.

2008-11-01  Janus Weil  <janus@gcc.gnu.org>

	PR fortran/36322
	PR fortran/36463
	* gfortran.dg/proc_decl_17.f90: New.
	* gfortran.dg/proc_decl_18.f90: New.

2008-11-01  Richard Guenther  <rguenther@suse.de>

	PR middle-end/37976
	* gcc.c-torture/compile/pr37976.c: New testcase.

2008-11-01  Dennis Wassel  <dennis.wassel@gmail.com>

	PR fortran/37159
	* gfortran.dg/random_seed_1.f90: New testcase.

2008-10-31  Manuel López-Ibáñez  <manu@gcc.gnu.org>

	* gcc.dg/cpp/Wsignprom.c: Add column numbers.
	* gcc.dg/cpp/if-mpar.c: Likewise.

2008-10-31  Jakub Jelinek  <jakub@redhat.com>

	PR c++/37967
	* g++.dg/cpp0x/auto8.C: New test.

	PR c++/37965
	* g++.dg/cpp0x/auto7.C: New test.

2008-10-31  Mikael Morin  <mikael.morin@tele2.fr>

	PR fortran/35840
	* gfortran.dg/write_check4.f90: New test.

2008-10-31  Mikael Morin  <mikael.morin@tele2.fr>

	PR fortran/35820
	* gfortran.dg/nested_forall_1.f: New test.

2008-10-30  Steven G. Kargl  <kargls@comcast.net>

	PR fortran/37930
	* gfortran.dg/int_conv_2.f90:  New test.

2008-10-30  Mikael Morin  <mikael.morin@tele2.fr>

        PR fortran/37903
        * gfortran.dg/vector_subscript_4.f90: New test.

2008-10-30  Mikael Morin  <mikael.morin@tele2.fr>

        PR fortran/37749
        * gfortran.dg/vector_subscript__5.f90: New test.

2008-10-30  Jakub Jelinek  <jakub@redhat.com>

	* gcc.target/s390/pr36822.c: Avoid cast to pointer from integer
	of different size warning with -m31.

	PR middle-end/37730
	* gcc.dg/vect/pr37730.c: New test.

	PR debug/36668
	* g++.dg/other/PR23205.C: Allow foobar to be defined as variable.
	* g++.dg/other/pr23205-2.C: New test.
